RESOLVED FIXED202583
Crash in debug build with imported/w3c/web-platform-tests/web-animations/timing-model/timelines/update-and-send-events-replacement.html
https://bugs.webkit.org/show_bug.cgi?id=202583
Summary Crash in debug build with imported/w3c/web-platform-tests/web-animations/timi...
Antoine Quint
Reported 2019-10-04 06:38:35 PDT
The test at imported/w3c/web-platform-tests/web-animations/timing-model/timelines/update-and-send-events-replacement.html crashes with a debug build.
Attachments
Patch (1.78 KB, patch)
2019-10-04 06:40 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-10-04 06:40:58 PDT
WebKit Commit Bot
Comment 2 2019-10-04 12:29:42 PDT
Comment on attachment 380217 [details] Patch Clearing flags on attachment: 380217 Committed r250737: <https://trac.webkit.org/changeset/250737>
WebKit Commit Bot
Comment 3 2019-10-04 12:29:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-10-04 12:30:15 PDT
Note You need to log in before you can comment on or make changes to this bug.